fixed side lists alignments

--- a/Frontend/personal-portfolio-manager/src/app/market-movers/market-movers.component.css
+++ b/Frontend/personal-portfolio-manager/src/app/market-movers/market-movers.component.css
@@ -2,3 +2,10 @@ div {display:inline-block;
     height: 200px;
     width: 80%;
 }
+
+#market-movers {
+    display: flex;
+    justify-content: space-between;
+  }
+
+ 
